// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
  disabled={false}
>
  <input
    checked={null}
    className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
    id="Checkbox"
    onBlur={null}
    onChange={null}
    onClick={[Function]}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
    color={null}
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor="Checkbox"
    letterSpacing=".5px"
    onClick={[Function]}
  >
    Checkbox
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
    disabled={false}
  >
    <input
      checked={true}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
      id="Checked"
      onBlur={null}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Checked"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Checked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
      id="Unchecked"
      onBlur={null}
      onChange={null}
      onClick={[Function]}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Unchecked"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Unchecked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kAsDbW"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 hiTDpn"
      id="Error"
      onBlur={null}
      onChange={null}
      onClick={[Function]}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Error"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Error
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bIjZKa"
    disabled={true}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 kaIWYG"
      id="Disabled"
      onBlur={null}
      onChange={null}
      onClick={[Function]}
      onFocus={null}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Disabled"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
      id="Left Aligned"
      onBlur={null}
      onChange={null}
      onClick={[Function]}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Left Aligned"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gQociL"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
      id="Right Aligned"
      onBlur={null}
      onChange={null}
      onClick={[Function]}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Right Aligned"
      letterSpacing=".5px"
      onClick={[Function]}
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 eiFyzY"
  disabled={false}
>
  <input
    checked={null}
    className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
    id="Checkbox"
    onBlur={null}
    onChange={null}
    onClick={[Function]}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 kNgtxq"
    color={null}
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor="Checkbox"
    letterSpacing=".5px"
    onClick={[Function]}
  >
    Checkbox
  </label>
</div>
`;

exports[` 5`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 jozDvZ"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fAaisW Form__Inputs-v2wrel-4 dVjwCB"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Form__TitleSection-v2wrel-3 gHAabJ"
        fontSize="0.875rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.25px"
      >
        Checkbox Group (2 Columns)
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Form__Inputs-v2wrel-4 cINxbe"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq Checkbox__CheckboxWrapper-sc-1gwp7am-0 cfHVch"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 gBiakJ Checkbox__InputGroup-sc-1gwp7am-4 fZyrGZ"
            id={null}
            rows={null}
          >
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
                id="Checkbox-1"
                onBlur={null}
                onChange={null}
                onClick={[Function]}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
                color={null}
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-1"
                letterSpacing=".5px"
                onClick={[Function]}
              >
                Checkbox 1
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
                id="Checkbox-2"
                onBlur={null}
                onChange={null}
                onClick={[Function]}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
                color={null}
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-2"
                letterSpacing=".5px"
                onClick={[Function]}
              >
                Checkbox 2
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
                id="Checkbox-3"
                onBlur={null}
                onChange={null}
                onClick={[Function]}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
                color={null}
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-3"
                letterSpacing=".5px"
                onClick={[Function]}
              >
                Checkbox 3
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hnLPhP"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-3 eYGJEk"
                id="Checkbox-4"
                onBlur={null}
                onChange={null}
                onClick={[Function]}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 btVuKb Checkbox__CheckboxLabel-sc-1gwp7am-2 fhpWKY"
                color={null}
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-4"
                letterSpacing=".5px"
                onClick={[Function]}
              >
                Checkbox 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </section>
</form>
`;
